--- a/index.html
+++ b/index.html
@@ -194,23 +194,25 @@ h1{ margin:0; font-size:16px; color:var(--accent) }
 
 <script>
 /*
-  SpacePass — updated: add 2h-back + 2h-forward shadow markers (marker jalur)
-  Keep all original behavior; only add marker-path features and safety fixes.
+  SpacePass — final merged & fixed
+  - Past (red) and future (yellow) continuous polylines for ±55 minutes
+  - Single live marker
+  - Avoid abstract jumps, use TLE for propagation or linear fallback
+  - Keep existing features (track storage, TLE cache, MarineRegions reverse)
 */
 
 // ---- CONFIG ----
 const POLL_MS = 5000;
 const MAX_POINTS = 2000;
-const JUMP_KM_THRESHOLD = 1000; // if gap > 1000 km, start new segment
+const JUMP_KM_THRESHOLD = 1000; // if gap > 1000 km, break segments
 const CELESTRAK_URL = 'https://celestrak.com/NORAD/elements/stations.txt';
 const MARINEREGIONS_EEZ_ENDPOINT = 'https://www.marineregions.org/rest/getGazetteerRecordsByLatLong.json'; // append /{lat}/{lon}
 
-// sampling for shadow markers
-const SHADOW_INTERVAL_SEC = 60; // sample every 60s (1 minute)
-const PAST_DURATION_SEC = 2 * 3600; // 2 hours back
-const FUTURE_DURATION_SEC = 2 * 3600; // 2 hours forward
+// durations: 55 minutes each side
+const SHADOW_INTERVAL_SEC = 60; // sample interval in seconds (1 min)
+const PAST_DURATION_SEC = 55 * 60; // 55 minutes back
+const FUTURE_DURATION_SEC = 55 * 60; // 55 minutes forward
 
-// small sample fallback positions (used only if no API/TLE)
 const SAMPLE_POSITIONS = [
   {latitude: 0.0, longitude: 0.0, altitude: 408, velocity: 27600},
   {latitude: 0.25, longitude: 0.8, altitude: 407.9, velocity: 27605}
@@ -218,13 +220,9 @@ const SAMPLE_POSITIONS = [
 
 // ---- STATE ----
 let USING = { tilesLocal:false, posAPI:false, tleLoaded:false, tleUsed:false };
-let tleLines = null; // [line1, line2]
+let tleLines = null;
 let tleCachedAt = null;
 let lastSourceWasAPI = null;
-
-// shadow markers storage
-let pastShadowMarkers = [];
-let futureShadowMarkers = [];
 
 // ---- UI refs ----
 const latEl = document.getElementById('lat');
@@ -266,27 +264,26 @@ async function initTiles(){
 }
 initTiles();
 
-// ---- ICONS & POLYLINES ----
-const redIcon = L.divIcon({
-  html: `<svg width="44" height="44" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><g><circle cx="32" cy="32" r="18" fill="#ff3b3b" opacity="0.12"/><path d="M20 32h24" stroke="#ff3b3b" stroke-width="2.2" stroke-linecap="round"/></g></svg>`,
-  className:'', iconSize:[44,44], iconAnchor:[22,22]
-});
+// ---- ICONS & LINES ----
 const mainIcon = L.divIcon({
-  html: `<svg width="48" height="48" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><g><circle cx="32" cy="32" r="18" fill="#ff3b3b" opacity="0.12"/><path d="M20 32h24" stroke="#ff3b3b" stroke-width="2.2" stroke-linecap="round"/></g></svg>`,
+  html: `<svg width="48" height="48" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><g><circle cx="32" cy="32" r="18" fill="#ff3b3b" opacity="0.14"/><path d="M20 32h24" stroke="#ff3b3b" stroke-width="2.4" stroke-linecap="round"/></g></svg>`,
   className:'', iconSize:[48,48], iconAnchor:[24,24]
 });
-// main marker (current position)
 const issMarker = L.marker([0,0], { icon: mainIcon }).addTo(map);
 
-// We'll keep arrays of segments (each segment is an L.Polyline)
+// Continuous polylines for past & future (single polyline each)
+let pastLine = L.polyline([], { color:'#ff3b3b', weight:4, opacity:0.95 }).addTo(map);
+let futureLine = L.polyline([], { color:'#ffd166', weight:4, opacity:0.95, dashArray: '8 6' }).addTo(map);
+
+// We'll still keep segments for long-term storage visualization (optional)
 let onlineSegments = [];
 let offlineSegments = [];
-let onlinePoints = []; // array of {latitude,longitude,altitude,velocity,timestamp,source}
+let onlinePoints = []; // {latitude, longitude, altitude, velocity, timestamp, source}
 let offlinePoints = [];
 
-// helpers to create segments
+// helpers to create older segments (preserved behavior)
 function createOnlineSegment(coords){
-  const seg = L.polyline(coords, { color:'#ff3b3b', weight:4, opacity:0.98 }).addTo(map);
+  const seg = L.polyline(coords, { color:'#ff3b3b', weight:3, opacity:0.85 }).addTo(map);
   onlineSegments.push(seg);
   return seg;
 }
@@ -310,7 +307,6 @@ function haversine(lat1,lon1,lat2,lon2){
   const c = 2*Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
   return R*c;
 }
-// normalize longitude so it's close to lastLon (avoid polyline wrapping)
 function normalizeLon(lastLon, newLon){
   if(lastLon === null || lastLon === undefined) return ((newLon+180)%360+360)%360 - 180;
   let n = newLon;
@@ -320,17 +316,15 @@ function normalizeLon(lastLon, newLon){
   return n;
 }
 
-// ---- TLE: fetch, cache, load ----
+// ---- TLE fetch/cache/load ----
 async function fetchAndCacheTLE(){
   try{
     const r = await fetch(CELESTRAK_URL).catch(()=>null);
     if(!r || !r.ok) return false;
     const txt = await r.text();
-    // find ISS (usually "ISS (ZARYA)" line)
     const lines = txt.split(/\r?\n/).map(s=>s.trim()).filter(Boolean);
     for(let i=0;i<lines.length;i++){
       if(/ISS\s*\(|ISS\s*ZARYA|ISS \(ZARYA\)/i.test(lines[i]) || lines[i].toUpperCase().includes('ISS')){
-        // assume next two lines are TLE
         if(i+2 < lines.length){
           const l1 = lines[i+1], l2 = lines[i+2];
           tleLines = [l1, l2];
@@ -365,10 +359,9 @@ function loadCachedTLE(){
   }catch(e){}
 }
 loadCachedTLE();
-// try fetch in background (don't block)
 fetchAndCacheTLE().catch(()=>{});
 
-// ---- PROPAGATION FROM TLE (for arbitrary date) ----
+// ---- TLE propagation for arbitrary date ----
 function posFromTLEAtDate(date){
   try{
     if(!(tleLines && window.satellite)) return null;
@@ -382,12 +375,11 @@ function posFromTLEAtDate(date){
     const alt = geo.height;
     return { latitude: lat, longitude: lon, altitude: alt, velocity: null, timestamp: Math.floor(date.getTime()/1000), source:'TLE' };
   }catch(e){
-    //console.warn('posFromTLEAtDate err', e);
     return null;
   }
 }
 
-// ---- API FETCH ----
+// ---- API fetch ----
 async function fetchFromAPI(){
   try{
     const r = await fetch('https://api.wheretheiss.at/v1/satellites/25544');
@@ -410,27 +402,23 @@ function samplePos(){
   return { ...p, timestamp: nowUnix(), source:'sample' };
 }
 
-// ---- GET POSITION LOGIC: API -> TLE -> sample ----
+// ---- main getPosition (API -> TLE -> sample) ----
 async function getPosition(){
   const api = await fetchFromAPI();
   if(api){
-    // if we got API, refresh cached TLE in background (so we always keep latest TLE when online)
     fetchAndCacheTLE().catch(()=>{});
     USING.posAPI = true;
     return api;
   }
   USING.posAPI = false;
-  // try TLE from cached or loaded
   if(tleLines && window.satellite){
     const tpos = posFromTLEAtDate(new Date());
-    if(tpos){
-      return tpos;
-    }
+    if(tpos) return tpos;
   }
   return samplePos();
 }
 
-// ---- TRACK STORAGE & REBUILD ----
+// ---- track storage & polylines rebuild (preserve) ----
 function saveTrack(){
   try{
     const merged = onlinePoints.concat(offlinePoints);
@@ -475,16 +463,15 @@ function rebuildPolylinesFromPoints(){
   splitAndCreate(offlinePoints, coords => createOfflineSegment(coords));
 }
 
-// ---- ADD POINT SMART: segmentation, normalization, transitions ----
+// ---- add point smart (preserve logic) ----
 function addPointSmart(pos){
-  pos = Object.assign({}, pos); // copy
+  pos = Object.assign({}, pos);
   pos.timestamp = pos.timestamp || nowUnix();
   const isAPI = pos.source === 'API';
 
   if(lastSourceWasAPI === true && !isAPI){
-    // preserve separation; handled below
+    // separation handled below
   }
-
   lastSourceWasAPI = isAPI;
 
   const arr = isAPI ? onlinePoints : offlinePoints;
@@ -501,7 +488,7 @@ function addPointSmart(pos){
       saveTrack();
       pointsCountEl.textContent = onlinePoints.length + offlinePoints.length;
       updateUIFromPos(pos);
-      updateShadowMarkers(); // refresh shadows
+      updatePastFutureLines(); // refresh lines
       return;
     }
   } else {
@@ -512,7 +499,7 @@ function addPointSmart(pos){
     saveTrack();
     pointsCountEl.textContent = onlinePoints.length + offlinePoints.length;
     updateUIFromPos(pos);
-    updateShadowMarkers();
+    updatePastFutureLines();
     return;
   }
 
@@ -533,10 +520,9 @@ function addPointSmart(pos){
   saveTrack();
   pointsCountEl.textContent = onlinePoints.length + offlinePoints.length;
   updateUIFromPos(pos);
-  updateShadowMarkers();
+  updatePastFutureLines();
 }
 
-// ensure arrays not exceed MAX_POINTS (drop oldest from offline first)
 function truncatePointsIfNeeded(){
   while(onlinePoints.length + offlinePoints.length > MAX_POINTS){
     if(offlinePoints.length) offlinePoints.shift();
@@ -544,7 +530,7 @@ function truncatePointsIfNeeded(){
   }
 }
 
-// ---- UI update from pos ----
+// ---- UI updates ----
 function updateUIFromPos(p){
   latEl.textContent = p.latitude.toFixed(5);
   lonEl.textContent = p.longitude.toFixed(5);
@@ -565,7 +551,7 @@ function updateUIFromPos(p){
   try{ issMarker.setLatLng([p.latitude, p.longitude]); }catch(e){}
 }
 
-// ---- Reverse place: MarineRegions first -> fallback Nominatim; always return readable name only ----
+// ---- reverse place (marine -> nominatim) ----
 const _rg_cache = new Map();
 async function lookupMarineRegions(lat, lon){
   try{
@@ -615,7 +601,7 @@ async function reversePlace(lat, lon){
   }
 }
 
-// ---- update pass UI (prev/now/next) using reversePlace ----
+// ---- update pass info (prev / now / next) ----
 async function updatePassInfo(){
   const all = onlinePoints.concat(offlinePoints).sort((a,b)=> (a.timestamp||0)-(b.timestamp||0));
   const n = all.length;
@@ -640,25 +626,7 @@ async function updatePassInfo(){
   if(next) reversePlace(next.latitude, next.longitude).then(name=> nextPlaceEl.textContent = name);
 }
 
-// ---- shadow markers management ----
-function clearShadowMarkers(){
-  pastShadowMarkers.forEach(m => map.removeLayer(m));
-  futureShadowMarkers.forEach(m => map.removeLayer(m));
-  pastShadowMarkers = [];
-  futureShadowMarkers = [];
-}
-function createPastMarker(lat, lon){
-  const m = L.circleMarker([lat, lon], { radius: 3.2, fill:true, fillOpacity:0.9, color:'#0097ff', weight:1, opacity:0.95 }).addTo(map);
-  pastShadowMarkers.push(m);
-  return m;
-}
-function createFutureMarker(lat, lon){
-  const m = L.circleMarker([lat, lon], { radius: 3.2, fill:true, fillOpacity:0.8, color:'#9adf00', weight:1, opacity:0.85 }).addTo(map);
-  futureShadowMarkers.push(m);
-  return m;
-}
-
-// get position for arbitrary unix time (try track nearest, else TLE propagation)
+// ---- build continuous past & future polylines ----
 function getNearestTrackPositionAt(unixSec){
   const all = onlinePoints.concat(offlinePoints);
   if(!all.length) return null;
@@ -669,52 +637,49 @@ function getNearestTrackPositionAt(unixSec){
       bestDiff = d; best = p;
     }
   }
-  // if close enough (<= 90s) return it
-  if(best && bestDiff <= 90) return { latitude: best.latitude, longitude: best.longitude, timestamp: best.timestamp, source: best.source };
+  if(best && bestDiff <= SHADOW_INTERVAL_SEC + 30) return best; // accept if close enough
   return null;
 }
-
 function propagateUsingTLEAt(unixSec){
   if(!(tleLines && window.satellite)) return null;
   const date = new Date(unixSec*1000);
   return posFromTLEAtDate(date);
 }
 
-// build past positions array sampled every SHADOW_INTERVAL_SEC between now-PAST_DURATION_SEC and now
-async function buildPastPositions(){
+async function buildPastPolylinePoints(){
   const now = nowUnix();
   const start = now - PAST_DURATION_SEC;
-  const positions = [];
+  const pts = [];
   for(let t = start; t <= now; t += SHADOW_INTERVAL_SEC){
-    // 1) nearest track point
-    const fromTrack = getNearestTrackPositionAt(t);
-    if(fromTrack) positions.push(fromTrack);
-    else {
-      // 2) fallback TLE propagation
-      const p = propagateUsingTLEAt(t);
-      if(p) positions.push(p);
-      // else skip (no data)
+    const trackPos = getNearestTrackPositionAt(t);
+    if(trackPos) {
+      pts.push([trackPos.latitude, trackPos.longitude, trackPos.timestamp]);
+      continue;
     }
-    // limit markers to reasonable number automatically by interval*duration
+    const tlePos = propagateUsingTLEAt(t);
+    if(tlePos){
+      pts.push([tlePos.latitude, tlePos.longitude, tlePos.timestamp]);
+      continue;
+    }
+    // no data: skip
   }
-  return positions;
+  return pts;
 }
 
-// build future positions by propagation using TLE; if no TLE fallback to linear extrapolation from last two track points
-function buildFuturePositions(){
+function buildFuturePolylinePoints(){
   const now = nowUnix();
-  const out = [];
-  // prefer TLE
+  const pts = [];
+  // try TLE propagation first
   if(tleLines && window.satellite){
     for(let dt = SHADOW_INTERVAL_SEC; dt <= FUTURE_DURATION_SEC; dt += SHADOW_INTERVAL_SEC){
       const t = now + dt;
       const p = propagateUsingTLEAt(t);
-      if(p) out.push(p);
+      if(p) pts.push([p.latitude, p.longitude, p.timestamp]);
       else break;
     }
-    return out;
+    return pts;
   }
-  // fallback linear extrapolation using last two points
+  // fallback linear extrapolation from last two points
   const all = onlinePoints.concat(offlinePoints).sort((a,b)=> (a.timestamp||0)-(b.timestamp||0));
   if(all.length >= 2){
     const a = all[all.length-2], b = all[all.length-1];
@@ -725,30 +690,46 @@ function buildFuturePositions(){
       const t = now + dt2;
       const lat = b.latitude + dLatPerSec * dt2;
       const lon = b.longitude + dLonPerSec * dt2;
-      out.push({ latitude: lat, longitude: lon, timestamp: t, source: 'predict' });
+      pts.push([lat, lon, t]);
     }
-    return out;
   }
-  return out; // empty
+  return pts;
 }
 
-// create shadow markers from computed arrays
-async function updateShadowMarkers(){
+function normalizePolylineCoordsForWrap(poly){
+  // normalize longitudes to be continuous relative to previous point
+  if(!poly || poly.length === 0) return poly;
+  const out = [];
+  let lastLon = null;
+  for(const p of poly){
+    let lat = p[0], lon = p[1];
+    if(lastLon === null) {
+      lon = ((lon+180)%360+360)%360 - 180;
+    } else {
+      lon = normalizeLon(lastLon, lon);
+    }
+    out.push([lat, lon]);
+    lastLon = lon;
+  }
+  return out;
+}
+
+async function updatePastFutureLines(){
   try{
-    clearShadowMarkers();
-    const past = await buildPastPositions();
-    // create markers for past (limit to last N)
-    for(const p of past){
-      createPastMarker(p.latitude, p.longitude);
-    }
-    // future
-    const future = buildFuturePositions();
-    for(const p of future){
-      createFutureMarker(p.latitude, p.longitude);
-    }
+    // Past
+    const pastPts = await buildPastPolylinePoints(); // array [lat,lon,ts]
+    const pastCoords = normalizePolylineCoordsForWrap(pastPts);
+    pastLine.setLatLngs(pastCoords.map(p=>[p[0], p[1]]));
+
+    // Future
+    const futurePts = buildFuturePolylinePoints();
+    const futureCoords = normalizePolylineCoordsForWrap(futurePts);
+    futureLine.setLatLngs(futureCoords.map(p=>[p[0], p[1]]));
+
+    // optionally reduce visual overlap with stored segments: no change to segments themselves
   }catch(e){
     // ignore
-    //console.warn('updateShadowMarkers err', e);
+    //console.warn('updatePastFutureLines err', e);
   }
 }
 
@@ -765,7 +746,7 @@ function updateSourceLabel(){
 }
 
 // ---- controls ----
-clearTrackBtn.addEventListener('click', ()=>{ if(!confirm('Clear recorded track?')) return; onlinePoints=[]; offlinePoints=[]; onlineSegments.forEach(s=>map.removeLayer(s)); offlineSegments.forEach(s=>map.removeLayer(s)); onlineSegments=[]; offlineSegments=[]; pointsCountEl.textContent=0; saveTrack(); clearShadowMarkers(); });
+clearTrackBtn.addEventListener('click', ()=>{ if(!confirm('Clear recorded track?')) return; onlinePoints=[]; offlinePoints=[]; onlineSegments.forEach(s=>map.removeLayer(s)); offlineSegments.forEach(s=>map.removeLayer(s)); onlineSegments=[]; offlineSegments=[]; pointsCountEl.textContent=0; saveTrack(); pastLine.setLatLngs([]); futureLine.setLatLngs([]); });
 centerBtn.addEventListener('click', ()=>{ const all = onlinePoints.concat(offlinePoints).sort((a,b)=> (a.timestamp||0)-(b.timestamp||0)); if(all.length){ const p = all[all.length-1]; map.setView([p.latitude,p.longitude],4); }});
 
 // ---- main tick ----
@@ -789,9 +770,8 @@ async function tick(){
   updatePassInfo();
   updateSourceLabel();
 
-  // update shadow markers (past & future)
-  // keep this non-blocking but we await to reduce races
-  updateShadowMarkers().catch(()=>{});
+  // update continuous past & future lines (non-blocking)
+  updatePastFutureLines().catch(()=>{});
 
   try{ if(map && pos) map.panTo([pos.latitude,pos.longitude], { animate:true, duration:0.6 }); }catch(e){}
 }
